--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h1>El sitio donde encontraras las mejores oportunidades de obtener un equipo competitivo y dispuesto al cambio</h1>
                     <section class="btnAction">
                         <a href="views/services.html" class="ctaDeveloper">Desarrollador Web</a>
-                        <a href="views/services.html#designers" class="ctaDesigner">Diseñador UX/UI</a>
+                        <a href="views/services.html#contenedorDesign" class="ctaDesigner">Diseñador UX/UI</a>
                     </section>
                 </div>
                 <img class="cellphone" src="img/cellphone.png" alt="Foto cellphone">
@@ -510,9 +510,7 @@
                             </div>
                         </article>
                     </div>
-
                 </div>
-
             </div>
             <a href="views/testimonies.html" class="verMas">Ver mas...</a>
         </section>
@@ -555,43 +553,43 @@
                     <img class="itemCellphones"src="img/cellphones.png" alt="Banner cellphone">
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                         <div class="accordion-item bg-secondary mb-2 border border-dark rounded-3 shadow">
-                          <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                                 Habilidades en Demanda
-                            </button>
-                          </h2>
-                          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="paragraph accordion-body text-dark">Las habilidades técnicas como HTML, CSS, JavaScript, y frameworks como React, Angular y Vue.js siguen siendo muy demandadas. Además, las habilidades de programación en lenguajes como Python, PHP y Ruby son valiosas para el desarrollo web backend.</div>
-                          </div>
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="paragraph accordion-body text-dark">Las habilidades técnicas como HTML, CSS, JavaScript, y frameworks como React, Angular y Vue.js siguen siendo muy demandadas. Además, las habilidades de programación en lenguajes como Python, PHP y Ruby son valiosas para el desarrollo web backend.</div>
+                            </div>
                         </div>
                         <div class="accordion-item bg-secondary mb-2 border border-dark rounded-3 shadow">
-                          <h2 class="accordion-header" id="flush-headingTwo">
-                            <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            <h2 class="accordion-header" id="flush-headingTwo">
+                                <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                                 Crecimiento del Empleo
-                            </button>
-                          </h2>
-                          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="paragraph accordion-body text-dark">La demanda de desarrolladores y diseñadores web ha estado en constante crecimiento en la última década. Se espera que esta tendencia continúe debido a la digitalización de las empresas y la expansión de la presencia en línea.</div>
-                          </div>
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                <div class="paragraph accordion-body text-dark">La demanda de desarrolladores y diseñadores web ha estado en constante crecimiento en la última década. Se espera que esta tendencia continúe debido a la digitalización de las empresas y la expansión de la presencia en línea.</div>
+                            </div>
                         </div>
                         <div class="accordion-item bg-secondary mb-2 border border-dark rounded-3 shadow">
-                          <h2 class="accordion-header" id="flush-headingThree">
-                            <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                            <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                                 Diversificación de Roles
-                            </button>
-                          </h2>
-                          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="paragraph accordion-body text-dark"> El campo de desarrollo y diseño web se ha diversificado en una serie de roles especializados, como desarrolladores front-end, back-end, full-stack, diseñadores UX/UI, especialistas en comercio electrónico y más. Esto ha creado oportunidades para especializarse en áreas específicas.</div>
-                          </div>
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="paragraph accordion-body text-dark"> El campo de desarrollo y diseño web se ha diversificado en una serie de roles especializados, como desarrolladores front-end, back-end, full-stack, diseñadores UX/UI, especialistas en comercio electrónico y más. Esto ha creado oportunidades para especializarse en áreas específicas.</div>
+                            </div>
                         </div>
                         <div class="accordion-item bg-secondary mb-2 border border-dark rounded-3 shadow">
                             <h2 class="accordion-header" id="flush-headingForth">
-                              <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseForth" aria-expanded="false" aria-controls="flush-collapseForth">
+                                <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseForth" aria-expanded="false" aria-controls="flush-collapseForth">
                                 Diseño Responsivo y UX/UI
-                            </button>
+                                </button>
                             </h2>
                             <div id="flush-collapseForth" class="accordion-collapse collapse" aria-labelledby="flush-headingForth" data-bs-parent="#accordionFlushExample">
-                              <div class="paragraph accordion-body text-dark">El diseño web responsivo, que garantiza que los sitios sean accesibles en dispositivos móviles, es fundamental. La mejora de la experiencia del usuario (UX) y la interfaz de usuario (UI) también son prioridades para garantizar que los sitios sean atractivos y funcionales.</div>
+                                <div class="paragraph accordion-body text-dark">El diseño web responsivo, que garantiza que los sitios sean accesibles en dispositivos móviles, es fundamental. La mejora de la experiencia del usuario (UX) y la interfaz de usuario (UI) también son prioridades para garantizar que los sitios sean atractivos y funcionales.</div>
                             </div>
                         </div>
                     </div>
@@ -672,7 +670,6 @@
             </div>
             <a class="whatsApp" href="https://web.whatsapp.com/" target="_blank">Whatsapp</a>
         </section>
-
     </main>
 
     <!-- Footer -->
