SASS Actualizacion Match

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         </div>
                         <div class="company">
                             <img src="img/factory.png" alt="Icono compañia" class="iconCompany">
-                            <p class="description">Compañia</p>
+                            <p class="descriptionCompany">Compañia</p>
                         </div>
                     </div>
                     <div class="cardCompany">
@@ -190,7 +190,7 @@
                         </div>
                         <div class="company">
                             <img src="img/factory.png" alt="Icono compañia" class="iconCompany">
-                            <p class="description">Compañia</p>
+                            <p class="descriptionCompany">Compañia</p>
                         </div>
                     </div>
                     <div class="cardCompany">
@@ -202,7 +202,7 @@
                         </div>
                         <div class="company">
                             <img src="img/factory.png" alt="Icono compañia" class="iconCompany">
-                            <p class="description">Compañia</p>
+                            <p class="descriptionCompany">Compañia</p>
                         </div>
                     </div>
                     <div class="cardCompany">
@@ -214,7 +214,7 @@
                         </div>
                         <div class="company">
                             <img src="img/factory.png" alt="Icono compañia" class="iconCompany">
-                            <p class="description">Compañia</p>
+                            <p class="descriptionCompany">Compañia</p>
                         </div>
                     </div>
                     <div class="cardCompany">
@@ -226,7 +226,7 @@
                         </div>
                         <div class="company">
                             <img src="img/factory.png" alt="Icono compañia" class="iconCompany">
-                            <p class="description">Compañia</p>
+                            <p class="descriptionCompany">Compañia</p>
                         </div>
                     </div>
                     <div class="cardCompany">
@@ -238,7 +238,7 @@
                         </div>
                         <div class="company">
                             <img src="img/factory.png" alt="Icono compañia" class="iconCompany">
-                            <p class="description">Compañia</p>
+                            <p class="descriptionCompany">Compañia</p>
                         </div>
                     </div>
                     <div class="cardCompany">
@@ -250,7 +250,7 @@
                         </div>
                         <div class="company">
                             <img src="img/factory.png" alt="Icono compañia" class="iconCompany">
-                            <p class="description">Compañia</p>
+                            <p class="descriptionCompany">Compañia</p>
                         </div>
                     </div>
                     <div class="cardCompany">
@@ -262,7 +262,7 @@
                         </div>
                         <div class="company">
                             <img src="img/factory.png" alt="Icono compañia" class="iconCompany">
-                            <p class="description">Compañia</p>
+                            <p class="descriptionCompany">Compañia</p>
                         </div>
                     </div>
                 </article>
@@ -297,7 +297,7 @@
                         </div>
                         <div class="staff">
                             <img src="img/staff.png" alt="Icono egresado" class="iconStaff">
-                            <p class="description">Staff</p>
+                            <p class="descriptionStaff">Staff</p>
                         </div>
                     </div>
                     <div class="cardStaff">
@@ -309,7 +309,7 @@
                         </div>
                         <div class="staff">
                             <img src="img/staff.png" alt="Icono egresado" class="iconStaff">
-                            <p class="description">Staff</p>
+                            <p class="descriptionStaff">Staff</p>
                         </div>
                     </div>
                     <div class="cardStaff">
@@ -321,7 +321,7 @@
                         </div>
                         <div class="staff">
                             <img src="img/staff.png" alt="Icono egresado" class="iconStaff">
-                            <p class="description">Staff</p>
+                            <p class="descriptionStaff">Staff</p>
                         </div>
                     </div>
                     <div class="cardStaff">
@@ -333,7 +333,7 @@
                         </div>
                         <div class="staff">
                             <img src="img/staff.png" alt="Icono egresado" class="iconStaff">
-                            <p class="description">Staff</p>
+                            <p class="descriptionStaff">Staff</p>
                         </div>
                     </div>
                     <div class="cardStaff">
@@ -345,7 +345,7 @@
                         </div>
                         <div class="staff">
                             <img src="img/staff.png" alt="Icono egresado" class="iconStaff">
-                            <p class="description">Staff</p>
+                            <p class="descriptionStaff">Staff</p>
                         </div>
                     </div>
                     <div class="cardStaff">
@@ -357,7 +357,7 @@
                         </div>
                         <div class="staff">
                             <img src="img/staff.png" alt="Icono egresado" class="iconStaff">
-                            <p class="description">Staff</p>
+                            <p class="descriptionStaff">Staff</p>
                         </div>
                     </div>
                     <div class="cardStaff">
@@ -369,7 +369,7 @@
                         </div>
                         <div class="staff">
                             <img src="img/staff.png" alt="Icono egresado" class="iconStaff">
-                            <p class="description">Staff</p>
+                            <p class="descriptionStaff">Staff</p>
                         </div>
                     </div>
                     <div class="cardStaff">
@@ -381,7 +381,7 @@
                         </div>
                         <div class="staff">
                             <img src="img/staff.png" alt="Icono egresado" class="iconStaff">
-                            <p class="description">Staff</p>
+                            <p class="descriptionStaff">Staff</p>
                         </div>
                     </div>
                 </article>
@@ -412,7 +412,7 @@
                             <img src="img/user1.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Sofia C.</p>
-                                <p>Diseñadora  UX/UI</p>
+                                <p>Dis.  UX/UI</p>
                                 <p>Bogota, Colombia</p>
                             </div>
                             <div class="socialMedia">
@@ -454,7 +454,7 @@
                             <img src="img/user2.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Erick B.</p>
-                                <p>Desarrollador Fullstack</p>
+                                <p>Des. Fullstack</p>
                                 <p>Lima, Peru</p>
                             </div>
                             <div class="socialMedia">
@@ -491,7 +491,7 @@
                             <img src="img/user3.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Samanta N.</p>
-                                <p>Diseñadora UX/UI</p>
+                                <p>Dis. UX/UI</p>
                                 <p>Medellín, Colombia</p>
                             </div>
                             <div class="socialMedia">
