--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="sideStaff">
+                <article class="sideStaff" id="sideStaff">
                     <div class="cardStaff">
                         <img src="img/user12.png" alt="Personal" class="picStaff">
                         <div class="lines">
