SASS Actualizacion TestimonyCategory

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
         <!-- Testimonios -->
 
-        <section class="containerTestimony m-auto">
+        <section class="containerTestimony">
             <h3 class="subtitulo">
                Testimonios
             </h3>
