SASS Correccion links Page Error404

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="views/wrong.html" target="_blank">
+                                <a href="views/errow404.html" target="_blank">
                                     <img src="img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -467,7 +467,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="views/wrong.html" target="_blank">
+                                <a href="views/error404.html" target="_blank">
                                     <img src="img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -504,7 +504,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="views/wrong.html" target="_blank">
+                                <a href="views/error404.html" target="_blank">
                                     <img src="img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
