SASS Actualizacion Animation & Mixins

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/logo2.png"/>
+    <link rel="icon" type="image/png" href="img/logo2.png" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="img/logo2.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="img/logo2.png" sizes="64x64"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Hoja de estilos -->
     <link rel="stylesheet" href="css/main.css">
+    <!-- Animations -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Normalize -->
+    <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
 </head>
 <body>
 
@@ -117,8 +123,8 @@
         <section class="nosotros">
             <h3 class="subtitulo">Quienes somos...</h3>
             <div class="containerInfo">
-                <img class="laptop"src="img/laptopside.png" alt="Banner laptop">
-                <article class="info">
+                <img class="laptop"src="img/laptopside.png" alt="Banner laptop" data-aos="fade-right" data-aos-duration="2000">
+                <article class="info" data-aos="fade-up" data-aos-duration="2000">
                     <p><span>"</span>En DeLord, nos apasiona conectar a los talentosos
                         desarrolladores y diseñadores web con las oportunidades que transforman carreras.
                         Somos más que una plataforma de empleo; somos un ecosistema que une la creatividad
@@ -140,9 +146,9 @@
             <h3 class="subtitulo">Servicios</h3>
             <div class="jobs">
                 <div class="screens">
-                    <img class="screen" src="img/screen3.png" alt="Screens DeLord">
+                    <img class="screen" src="img/screen3.png" alt="Screens DeLord" data-aos="fade-up" data-aos-duration="2000">
                 </div>
-                <div class="empleosArticle">
+                <div class="empleosArticle" data-aos="fade-right" data-aos-duration="2000">
                     <h3 class="subtitulo">¡Empleos desarrolladores web 💻  y diseñadores UX/UI  🎨!!!</h3>
                     <article class="contenedorEmpleo">
                         <p class="paragraph">"Únete a nuestro equipo de talentosos desarrolladores y diseñadores web. Si eres apasionado por crear experiencias en línea excepcionales,
@@ -158,9 +164,9 @@
 
         <!-- Banner - Publicidad -->
 
-        <section class="bannerPublicidadUno">
+        <section class="bannerPublicidadUno" ">
             <article class="banner">
-                <img class="laptop"src="img/laptopfront.png" alt="Banner laptop">
+                <img class="laptop"src="img/laptopfront.png" alt="Banner laptop" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
             </article>
         </section>
 
@@ -392,11 +398,11 @@
 
         <section class="containerTestimony">
             <h3 class="subtitulo">
-               Testimonios
+            Testimonios
             </h3>
             <div class="bundleOpinion">
                 <div class="groupLine row ">
-                    <div class="cardOpinionShort col-4">
+                    <div class="cardOpinionShort col-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                         <article class="opinionTop">
                             <img src="img/quotation-mark.png" alt="Acotación" class="quotationMark">
                             <img src="img/rating.png" alt="Rating" class="rating">
@@ -431,7 +437,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="cardOpinionShort col-4">
+                    <div class="cardOpinionShort col-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                         <article class="opinionTop">
                             <img src="img/quotation-mark.png" alt="Acotación" class="quotationMark">
                             <img src="img/rating.png" alt="Rating" class="rating">
@@ -473,7 +479,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="cardOpinionShort col-4">
+                    <div class="cardOpinionShort col-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                         <article class="opinionTop">
                             <img src="img/quotation-mark.png" alt="Acotación" class="quotationMark">
                             <img src="img/rating.png" alt="Rating" class="rating">
@@ -550,8 +556,8 @@
         <section class="bannerPublicidadDos">
             <article class="bannerSection">
                 <div class="banner">
-                    <img class="itemCellphones"src="img/cellphones.png" alt="Banner cellphone">
-                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <img class="itemCellphones"src="img/cellphones.png" alt="Banner cellphone" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
+                    <div class="accordion accordion-flush" id="accordionFlushExample" data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="1500">
                         <div class="accordion-item bg-secondary mb-2 border border-dark rounded-3 shadow">
                             <h2 class="accordion-header" id="flush-headingOne">
                                 <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -676,7 +682,7 @@
 
     <footer class="footer">
         <div class="mainFooter">
-            <section class="services">
+            <section class="services" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
                 <a class="my-1" href="index.html">
                     <img class="logo" src="img/logo2.png" alt="Logo Delord">
                 </a>
@@ -686,7 +692,7 @@
                     <a href="https://www.apple.com/co/app-store/" target="_blank"><img class="app mb-1" src="img/appstore.png" alt="App Store"></a>
                 </article>
             </section>
-            <section class="footerMedium">
+            <section class="footerMedium" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
                 <article class="news">
                     <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
                     <div class="accion">
@@ -695,7 +701,7 @@
                     </div>
                 </article>
             </section>
-            <nav class="menu">
+            <nav class="menu" data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="2000">
                 <ul>
                     <li><a class="categoria " href="index.html">Inicio</a></li>
                     <li><a class="categoria" href="views/services.html">Servicios</a></li>
@@ -706,7 +712,7 @@
             </nav>
         </div>
         <section class="containerSocialMedia">
-            <ul class="socialMedia">
+            <ul class="socialMedia" data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="2000">
                 <li>
                     <a href="https://es-la.facebook.com/" target="_blank" >
                         <img src="img/facebook.png" alt="Logo facebook" class="iconLink">
@@ -738,7 +744,7 @@
                     </a>
                 </li>
             </ul>
-            <p>Desarrollado y hecho con 🧡 por Diego Marín | Medellín Colombia | 2023</p>
+            <p data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="2000">Desarrollado y hecho con 🧡 por Diego Marín | Medellín Colombia | 2023</p>
         </section>
     </footer>
 
@@ -747,5 +753,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
+    <!-- Animations -->
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
