--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         <section class="nosotros">
             <h3 class="subtitulo">Quienes somos...</h3>
             <div class="containerInfo">
-                <img class="laptop"src="img/laptopside.png" alt="Banner laptop" data-aos="fade-right" data-aos-duration="2000">
-                <article class="info" data-aos="fade-up" data-aos-duration="2000">
+                <img class="laptop"src="img/laptopside.png" alt="Banner laptop" data-aos="fade-up" data-aos-duration="2000">
+                <article class="info" data-aos="zoom-out-right" data-aos-duration="2000">
                     <p><span>"</span>En DeLord, nos apasiona conectar a los talentosos
                         desarrolladores y diseñadores web con las oportunidades que transforman carreras.
                         Somos más que una plataforma de empleo; somos un ecosistema que une la creatividad
@@ -605,7 +605,7 @@
 
         <!-- Preguntas Frecuentes -->
 
-        <section class="row accordion mx-5 px-5">
+        <section class="row accordion mx-5 px-5" data-aos="fade-down-left data-aos-duration="2000">
             <h3 class="col subtitle">Preguntas frecuentes</h3>
             <div class="scrollDownAnswers">
                 <details class="row">
