Creacion File - gitignore

--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
         <section class="nosotros">
             <h3 class="subtitulo">Quienes somos...</h3>
             <div class="containerInfo">
-                <img class="laptop"src="img/laptopside.png" alt="Banner laptop" data-aos="fade-up" data-aos-duration="2000">
-                <article class="info" data-aos="zoom-out-right" data-aos-duration="2000">
+                <img class="laptop"src="img/laptopside.png" alt="Banner laptop" >
+                <!-- data-aos="fade-up" data-aos-duration="2000" -->
+                <article class="info">
+                    <!-- data-aos="zoom-out-right" data-aos-duration="2000" -->
                     <p><span>"</span>En DeLord, nos apasiona conectar a los talentosos
                         desarrolladores y diseñadores web con las oportunidades que transforman carreras.
                         Somos más que una plataforma de empleo; somos un ecosistema que une la creatividad
@@ -146,9 +148,11 @@
             <h3 class="subtitulo">Servicios</h3>
             <div class="jobs">
                 <div class="screens">
-                    <img class="screen" src="img/screen3.png" alt="Screens DeLord" data-aos="fade-up" data-aos-duration="2000">
+                    <img class="screen" src="img/screen3.png" alt="Screens DeLord">
+                    <!-- data-aos="fade-up" data-aos-duration="2000" -->
                 </div>
-                <div class="empleosArticle" data-aos="fade-right" data-aos-duration="2000">
+                <div class="empleosArticle">
+                    <!-- data-aos="fade-right" data-aos-duration="2000" -->
                     <h3 class="subtitulo">¡Empleos desarrolladores web 💻  y diseñadores UX/UI  🎨!!!</h3>
                     <article class="contenedorEmpleo">
                         <p class="paragraph">"Únete a nuestro equipo de talentosos desarrolladores y diseñadores web. Si eres apasionado por crear experiencias en línea excepcionales,
@@ -166,7 +170,8 @@
 
         <section class="bannerPublicidadUno" ">
             <article class="banner">
-                <img class="laptop"src="img/laptopfront.png" alt="Banner laptop" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
+                <img class="laptop"src="img/laptopfront.png" alt="Banner laptop">
+                <!-- data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
             </article>
         </section>
 
@@ -556,8 +561,10 @@
         <section class="bannerPublicidadDos">
             <article class="bannerSection">
                 <div class="banner">
-                    <img class="itemCellphones"src="img/cellphones.png" alt="Banner cellphone" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
-                    <div class="accordion accordion-flush" id="accordionFlushExample" data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="1500">
+                    <img class="itemCellphones"src="img/cellphones.png" alt="Banner cellphone">
+                    <!-- data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000 -->
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <!-- data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="1500" -->
                         <div class="accordion-item bg-secondary mb-2 border border-dark rounded-3 shadow">
                             <h2 class="accordion-header" id="flush-headingOne">
                                 <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -605,7 +612,8 @@
 
         <!-- Preguntas Frecuentes -->
 
-        <section class="row accordion mx-5 px-5" data-aos="fade-down-left data-aos-duration="2000">
+        <section class="row accordion mx-5 px-5">
+            <!-- data-aos="fade-down-left data-aos-duration="2000" -->
             <h3 class="col subtitle">Preguntas frecuentes</h3>
             <div class="scrollDownAnswers">
                 <details class="row">
@@ -682,7 +690,8 @@
 
     <footer class="footer">
         <div class="mainFooter">
-            <section class="services" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
+            <section class="services">
+                <!-- data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
                 <a class="my-1" href="index.html">
                     <img class="logo" src="img/logo2.png" alt="Logo Delord">
                 </a>
@@ -692,7 +701,8 @@
                     <a href="https://www.apple.com/co/app-store/" target="_blank"><img class="app mb-1" src="img/appstore.png" alt="App Store"></a>
                 </article>
             </section>
-            <section class="footerMedium" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
+            <section class="footerMedium">
+                <!-- data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
                 <article class="news">
                     <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
                     <div class="accion">
@@ -701,7 +711,8 @@
                     </div>
                 </article>
             </section>
-            <nav class="menu" data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="2000">
+            <nav class="menu">
+                <!-- data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
                 <ul>
                     <li><a class="categoria " href="index.html">Inicio</a></li>
                     <li><a class="categoria" href="views/services.html">Servicios</a></li>
@@ -712,7 +723,8 @@
             </nav>
         </div>
         <section class="containerSocialMedia">
-            <ul class="socialMedia" data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="2000">
+            <ul class="socialMedia">
+                <!-- data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
                 <li>
                     <a href="https://es-la.facebook.com/" target="_blank" >
                         <img src="img/facebook.png" alt="Logo facebook" class="iconLink">
@@ -744,7 +756,8 @@
                     </a>
                 </li>
             </ul>
-            <p data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="2000">Desarrollado y hecho con 🧡 por Diego Marín | Medellín Colombia | 2023</p>
+            <p>Desarrollado y hecho con 🧡 por Diego Marín | Medellín Colombia | 2023</p>
+            <!-- data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
         </section>
     </footer>
 
