--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <a href="views/services.html#contenedorDesign" class="ctaDesigner">Diseñador UX/UI</a>
                     </section>
                 </div>
-                <img class="cellphone" src="img/cellphone.png" alt="Foto cellphone">
+                <img class="cellphone" src="img/cellphone.webp" alt="Foto cellphone">
             </article>
         </section>
 
@@ -123,19 +123,12 @@
         <section class="nosotros">
             <h3 class="subtitulo">Quienes somos...</h3>
             <div class="containerInfo">
-                <img class="laptop"src="img/laptopside.png" alt="Banner laptop" >
-                <!-- data-aos="fade-up" data-aos-duration="2000" -->
+                <img class="laptop"src="img/laptopside.webp" alt="Banner laptop" >
                 <article class="info">
-                    <!-- data-aos="zoom-out-right" data-aos-duration="2000" -->
                     <p><span>"</span>En DeLord, nos apasiona conectar a los talentosos
                         desarrolladores y diseñadores web con las oportunidades que transforman carreras.
                         Somos más que una plataforma de empleo; somos un ecosistema que une la creatividad
                         y la innovación para impulsar el mundo digital hacia adelante.<span>"</span><br><br>
-                        <!-- Con años de experiencia en la industria, entendemos los desafíos y las oportunidades
-                        que enfrentan los profesionales del desarrollo y diseño web. Nuestra plataforma está
-                        diseñada para hacer coincidir tus habilidades únicas con las compañías que buscan
-                        exactamente lo que ofreces. No se trata solo de encontrar un trabajo; se trata
-                        de encontrar tu lugar en un mundo digital en constante evolución. -->
                     </p>
                     <img class="grupos" src="img/grupo.png" alt="Usuarios DeLord">
                 </article>
@@ -148,8 +141,7 @@
             <h3 class="subtitulo">Servicios</h3>
             <div class="jobs">
                 <div class="screens">
-                    <img class="screen" src="img/screen3.png" alt="Screens DeLord">
-                    <!-- data-aos="fade-up" data-aos-duration="2000" -->
+                    <img class="screen" src="img/screen3.webp" alt="Screens DeLord">
                 </div>
                 <div class="empleosArticle">
                     <!-- data-aos="fade-right" data-aos-duration="2000" -->
@@ -170,8 +162,7 @@
 
         <section class="bannerPublicidadUno" ">
             <article class="banner">
-                <img class="laptop"src="img/laptopfront.png" alt="Banner laptop">
-                <!-- data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
+                <img class="laptop"src="img/laptopfront.webp" alt="Banner laptop">
             </article>
         </section>
 
@@ -407,7 +398,7 @@
             </h3>
             <div class="bundleOpinion">
                 <div class="groupLine row ">
-                    <div class="cardOpinionShort col-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+                    <div class="cardOpinionShort col-4" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
                         <article class="opinionTop">
                             <img src="img/quotation-mark.png" alt="Acotación" class="quotationMark">
                             <img src="img/rating.png" alt="Rating" class="rating">
@@ -442,7 +433,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="cardOpinionShort col-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+                    <div class="cardOpinionShort col-4" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                         <article class="opinionTop">
                             <img src="img/quotation-mark.png" alt="Acotación" class="quotationMark">
                             <img src="img/rating.png" alt="Rating" class="rating">
@@ -484,7 +475,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="cardOpinionShort col-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+                    <div class="cardOpinionShort col-4" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="3000">
                         <article class="opinionTop">
                             <img src="img/quotation-mark.png" alt="Acotación" class="quotationMark">
                             <img src="img/rating.png" alt="Rating" class="rating">
@@ -561,10 +552,8 @@
         <section class="bannerPublicidadDos">
             <article class="bannerSection">
                 <div class="banner">
-                    <img class="itemCellphones"src="img/cellphones.png" alt="Banner cellphone">
-                    <!-- data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000 -->
+                    <img class="itemCellphones"src="img/cellphones.webp" alt="Banner cellphone">
                     <div class="accordion accordion-flush" id="accordionFlushExample">
-                        <!-- data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="1500" -->
                         <div class="accordion-item bg-secondary mb-2 border border-dark rounded-3 shadow">
                             <h2 class="accordion-header" id="flush-headingOne">
                                 <button class="title accordion-button collapsed bg-dark text-white-50" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -613,7 +602,6 @@
         <!-- Preguntas Frecuentes -->
 
         <section class="row accordion mx-5 px-5">
-            <!-- data-aos="fade-down-left data-aos-duration="2000" -->
             <h3 class="col subtitle">Preguntas frecuentes</h3>
             <div class="scrollDownAnswers">
                 <details class="row">
@@ -691,7 +679,6 @@
     <footer class="footer">
         <div class="mainFooter">
             <section class="services">
-                <!-- data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
                 <a class="my-1" href="index.html">
                     <img class="logo" src="img/logo2.png" alt="Logo Delord">
                 </a>
@@ -702,7 +689,6 @@
                 </article>
             </section>
             <section class="footerMedium">
-                <!-- data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
                 <article class="news">
                     <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
                     <div class="accion">
@@ -712,7 +698,6 @@
                 </article>
             </section>
             <nav class="menu">
-                <!-- data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
                 <ul>
                     <li><a class="categoria " href="index.html">Inicio</a></li>
                     <li><a class="categoria" href="views/services.html">Servicios</a></li>
@@ -724,7 +709,6 @@
         </div>
         <section class="containerSocialMedia">
             <ul class="socialMedia">
-                <!-- data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
                 <li>
                     <a href="https://es-la.facebook.com/" target="_blank" >
                         <img src="img/facebook.png" alt="Logo facebook" class="iconLink">
@@ -757,7 +741,6 @@
                 </li>
             </ul>
             <p>Desarrollado y hecho con 🧡 por Diego Marín | Medellín Colombia | 2023</p>
-            <!-- data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="2000" -->
         </section>
     </footer>
 
