Actualization Meta description

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Normalize -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
+    <!-- Meta para SEO -->
+    <meta name="description" content="La plataforma líder en servicios de empleo para desarrolladores y diseñadores web. Conectamos talento digital con empresas innovadoras. Encuentra el empleo o el profesional ideal aquí." />
 </head>
 <body>
 
