--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- Meta para SEO -->
     <meta name="description" content="La plataforma líder en servicios de empleo para desarrolladores y diseñadores web. Conectamos talento digital con empresas innovadoras. Encuentra el empleo o el profesional ideal aquí." />
     <meta name="keywords" content="Desarrolladores web, Diseñadores web, Oportunidades de carrera, Plataforma de empleo, Ecosistema creativo, Innovación digital, Experiencias en línea, Entorno creativo, Habilidades de desarrollo, Diseño UX/UI, Aplicar ahora, Empleo en desarrollo web, Empleo en diseño UX/UI, Ofertas de trabajo, Interfaz amigable, Filtros de búsqueda, Notificaciones de empleo, Oportunidades laborales, Publicación de ofertas de trabajo, Emparejamiento de candidatos, Registro de empleador, Recursos educativos, Tutoriales, Cursos de desarrollo web y diseño" />
+    <meta name="author" content="Diego Marin Mora & Delord Company" />
+    <meta name="copyright" content="© [2023] [Diego Marin Mora & Delord Company]" />
 </head>
 <body>
 
