--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         Somos más que una plataforma de empleo; somos un ecosistema que une la creatividad
                         y la innovación para impulsar el mundo digital hacia adelante.<span>"</span><br><br>
                     </p>
-                    <img class="grupos" src="img/grupo.svg" alt="Usuarios DeLord">
+                    <img class="grupos" src="img/grupo.png" alt="Usuarios DeLord">
                 </article>
             </div>
         </section>
