Actualization files svg

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         </div>
                     </div>
                     <div class="cardCompany">
-                        <img src="img/company.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company6.svg" alt="Compañia" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
